--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,9 +2,15 @@
   "extends": ["react-app", "airbnb", "plugin:jsx-a11y/recommended", "plugin:prettier/recommended"],
   "plugins": ["jsx-a11y", "prettier"],
   "rules": {
-    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+    "react/jsx-filename-extension": [
+      1,
+      {
+        "extensions": [".js", ".jsx"]
+      }
+    ],
     "no-console": "off",
     "no-use-before-define": 0,
-    "no-param-reassign": 1
+    "no-param-reassign": 1,
+    "react/state-in-constructor": "off"
   }
 }
