--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "format": "prettier --write \"src/**/*.+(js|jsx|json|css|md)\"",
-    "lint": "eslint .",
-    "scssComb": "csscomb src/"
+    "lint": "eslint ./src",
+    "lint:fix": "eslint --fix ./src"
   },
   "eslintConfig": {
     "extends": "react-app"
