--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "test": "react-scripts test",
     "format": "prettier --write \"src/**/*.+(js|jsx|json|css|md)\"",
     "lint": "eslint .",
-    "scssComb": "csscomb src/"
+    "lint:fix": "eslint --fix ./src"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -42,7 +42,6 @@
     ]
   },
   "devDependencies": {
-    "csscomb": "^4.3.0",
     "eslint-config-airbnb": "18.1.0",
     "eslint-config-prettier": "6.10.1",
     "eslint-plugin-jsx-a11y": "6.2.3",
