--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.1"
+    "react-scripts": "3.3.1",
+    "reactstrap": "^8.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,7 +51,6 @@
     "eslint-plugin-prettier": "3.1.2",
     "husky": "4.2.4",
     "prettier": "1.19.1",
-    "pretty-quick": "2.0.1",
-    "react-bootstrap": "^1.0.1"
+    "pretty-quick": "2.0.1"
   }
 }
