--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "4.2.4",
     "@testing-library/react": "9.5.0",
     "@testing-library/user-event": "7.1.2",
+    "classnames": "^2.2.6",
     "faker": "^4.1.0",
     "firebase": "^7.14.2",
     "firebaseui": "^4.5.0",
