--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
-    "reactstrap": "^8.4.1"
+    "reactstrap": "^8.4.1",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -56,9 +60,6 @@
     "eslint-plugin-prettier": "3.1.2",
     "husky": "4.2.4",
     "prettier": "1.19.1",
-    "pretty-quick": "2.0.1",
-    "react-redux": "^7.2.0",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "pretty-quick": "2.0.1"
   }
 }
