--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
+    "react-toastify": "^6.0.8",
+    "reactstrap": "^8.5.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0",
-    "react-toastify": "^6.0.8",
-    "reactstrap": "^8.5.1"
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
